@@ -4,7 +4,7 @@
 
 import setup as pycurl_setup
 import unittest
-import os, os.path
+import os, os.path, sys
 import nose.plugins.skip
 
 try:
@@ -43,6 +43,17 @@ def using_curl_config(path, ssl_library=None):
             finally:
                 reset_env('PYCURL_CURL_CONFIG', old_path)
                 reset_env('PYCURL_SSL_LIBRARY', old_ssl_library)
+        return decorated
+    return decorator
+
+def min_python_version(*spec):
+    def decorator(fn):
+        @functools.wraps(fn)
+        def decorated(*args, **kwargs):
+            if sys.version_info < spec:
+                raise nose.plugins.skip.SkipTest('Minimum Python version %s required' % spec.join('.'))
+            
+            return fn(*args, **kwargs)
         return decorated
     return decorator
 
@@ -101,6 +112,59 @@ class SetupTest(unittest.TestCase):
         config = pycurl_setup.ExtensionConfiguration()
         # ssl define should be on
         assert 'HAVE_CURL_SSL' in config.define_symbols
+    
+    # ctypes was added in python 2.5
+    @min_python_version(2, 4)
+    @using_curl_config('curl-config-empty')
+    def test_libcurl_ssl_openssl(self):
+        config = pycurl_setup.ExtensionConfiguration(['',
+            '--libcurl-dll=tests/fake-curl/libcurl/with_openssl.so'])
+        # openssl should be detected
+        assert 'HAVE_CURL_SSL' in config.define_symbols
+        assert 'HAVE_CURL_OPENSSL' in config.define_symbols
+        assert 'crypto' in config.libraries
+        
+        assert 'HAVE_CURL_GNUTLS' not in config.define_symbols
+        assert 'HAVE_CURL_NSS' not in config.define_symbols
+    
+    # ctypes was added in python 2.5
+    @min_python_version(2, 4)
+    @using_curl_config('curl-config-empty')
+    def test_libcurl_ssl_gnutls(self):
+        config = pycurl_setup.ExtensionConfiguration(['',
+            '--libcurl-dll=tests/fake-curl/libcurl/with_gnutls.so'])
+        # gnutls should be detected
+        assert 'HAVE_CURL_SSL' in config.define_symbols
+        assert 'HAVE_CURL_GNUTLS' in config.define_symbols
+        assert 'gnutls' in config.libraries
+        
+        assert 'HAVE_CURL_OPENSSL' not in config.define_symbols
+        assert 'HAVE_CURL_NSS' not in config.define_symbols
+    
+    # ctypes was added in python 2.5
+    @min_python_version(2, 4)
+    @using_curl_config('curl-config-empty')
+    def test_libcurl_ssl_nss(self):
+        config = pycurl_setup.ExtensionConfiguration(['',
+            '--libcurl-dll=tests/fake-curl/libcurl/with_nss.so'])
+        # nss should be detected
+        assert 'HAVE_CURL_SSL' in config.define_symbols
+        assert 'HAVE_CURL_NSS' in config.define_symbols
+        assert 'ssl3' in config.libraries
+        
+        assert 'HAVE_CURL_OPENSSL' not in config.define_symbols
+        assert 'HAVE_CURL_GNUTLS' not in config.define_symbols
+    
+    # ctypes was added in python 2.5
+    @min_python_version(2, 4)
+    @using_curl_config('curl-config-empty')
+    def test_libcurl_ssl_unrecognized(self):
+        config = pycurl_setup.ExtensionConfiguration(['',
+            '--libcurl-dll=tests/fake-curl/libcurl/with_unknown_ssl.so'])
+        assert 'HAVE_CURL_SSL' not in config.define_symbols
+        assert 'HAVE_CURL_OPENSSL' not in config.define_symbols
+        assert 'HAVE_CURL_GNUTLS' not in config.define_symbols
+        assert 'HAVE_CURL_NSS' not in config.define_symbols
     
     @using_curl_config('curl-config-empty')
     def test_with_ssl_library(self):
